IceLightning skill fixes